--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,14 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation group: 'io.jsonwebtoken', name:'jjwt-api', version: '0.11.5'
+	implementation group: 'io.jsonwebtoken', name:'jjwt-impl', version: '0.11.5'
+	implementation group: 'io.jsonwebtoken', name:'jjwt-jackson', version: '0.11.5'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
