--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/barbershop-with-roles?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/barbershop-with-roles?serverTimezone=UTC&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/barbershop?useUnicode=true&serverTimezone=UTC
 spring.datasource.username=root
