--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns-tz": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
