Fixes and update using status field
Delete timezone from datasource url and using setter for status field in OrderService while updating

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/barbershop-with-roles?serverTimezone=UTC&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/barbershop-with-roles?serverTimezone=UTC&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/barbershop?useUnicode=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/barbershop-with-roles?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
 spring.datasource.password=admin
+
+
