--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
+#hibernate conf
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/barbershop-with-roles?serverTimezone=UTC&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/barbershop?useUnicode=true&serverTimezone=UTC
+#database conf
 spring.datasource.url=jdbc:mysql://localhost:3306/barbershop-with-roles?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=root
 spring.datasource.password=admin
+#mail conf
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= ${MAIL.USERNAME}
+spring.mail.password= ${MAIL.PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 
