--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 # dependencies
 /node_modules
 /.pnp
@@ -10,6 +19,8 @@
 
 # production
 /build
+dist
+dist-ssr
 
 # misc
 .DS_Store
@@ -17,9 +28,18 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-*.jpg
 .env
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# additional files
+*.jpg
