Move secrets to env file
I realise that secrets are visible in previous commits, but this is project only as my portfolio. I won't deploy anywhere.

--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,5 @@
 MAIL.USERNAME=example@gmail.com
 MAIL.PASSWORD=GeneratedKeyFromGoogleAccount
+MYSQL.USERNAME=loginFromMySQL
+MYSQL.PASSWORD=passwordFromMySQL
+JWT.SECRET.KEY=YourSecretKey
