--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/barbershop?useUnicode=true&serverTimezone=UTC
 #database conf
 spring.datasource.url=jdbc:mysql://localhost:3306/barbershop-with-roles?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username=${MYSQL.USERNAME}
+spring.datasource.password=${MYSQL.PASSWORD}
 #mail conf
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
