Rename env vars to use _ instead of .

--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,5 +1,5 @@
-MAIL.USERNAME=example@gmail.com
-MAIL.PASSWORD=GeneratedKeyFromGoogleAccount
-MYSQL.USERNAME=loginFromMySQL
-MYSQL.PASSWORD=passwordFromMySQL
-JWT.SECRET.KEY=YourSecretKey
+MAIL_USERNAME=example@gmail.com
+MAIL_PASSWORD=GeneratedKeyFromGoogleAccount
+MYSQL_USERNAME=loginFromMySQL
+MYSQL_PASSWORD=passwordFromMySQL
+JWT_SECRET_KEY=YourSecretKey
