--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring.jpa.show-sql=true
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/barbershop?useUnicode=true&serverTimezone=UTC
 #database conf
 spring.datasource.url=jdbc:mysql://localhost:3306/barbershop-with-roles?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-spring.datasource.username=${MYSQL.USERNAME}
-spring.datasource.password=${MYSQL.PASSWORD}
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
 #mail conf
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username= ${MAIL.USERNAME}
-spring.mail.password= ${MAIL.PASSWORD}
+spring.mail.username= ${MAIL_USERNAME}
+spring.mail.password= ${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
