--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,14 +29,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	//runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation group: 'io.jsonwebtoken', name:'jjwt-api', version: '0.11.5'
 	implementation group: 'io.jsonwebtoken', name:'jjwt-impl', version: '0.11.5'
 	implementation group: 'io.jsonwebtoken', name:'jjwt-jackson', version: '0.11.5'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-
 	testImplementation 'org.junit.jupiter:junit-jupiter-api'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 	testImplementation 'org.mockito:mockito-core'
